# beacon

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  setup.bat  start-dev.bat  start-dev.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  testing_report.yml
.github/workflows/: deploy-docs.yml  release-desktop.yml
backend/: build_backend.py  mcp_server.spec  requirements.txt  run_mcp.py
backend/app/: main.py  mcp_server.py  state.py
backend/tests/: helpers.py  test_history_compare.py  test_history_privacy_recovery.py  test_history_repository.py  test_history_routes.py  test_history_runner_integration.py  test_history_service.py  test_jsonplaceholder_catalog.py  test_sample_project_flow.py
core/: tester.py
docs/: changelog.md  deployment.md  desktop.md  development.md  getting-started.md  index.md  installation.md  introduction.md  mcp.md
docs/.vitepress/: config.mts  config.ts
docs/concepts/: projects.md
docs/desktop/: build.md
docs/features/: chaining.md  folders.md  monitoring.md  postman-import.md  rate-limit.md  run-history.md  variables.md
docs/security-engagement/: 01-authorization-to-test-RoE.md  02-detection-rules.md  03-auth-hardening-review.md  04-defense-validation-plan.md
docs/templates/: project-import-template.json
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/scripts/: prepare-desktop.cjs
frontend/src/: App.tsx  globals.d.ts  index.css  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/skills/beacon/: SKILL.md
frontend/src-tauri/src/: main.rs  mcp_registration.rs
landing/: package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
landing/api/: stats.ts
landing/contributors/: index.html
landing/public/: _headers
landing/src/: contributors.tsx
scripts/: setup.js  validate-community-files.mjs
(+90 files in other folders)
