[package]
name = "beacon"
version = "0.2.3"
description = "Beacon - API Workspace"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# Shell/sidecar functionality lives in tauri-plugin-shell in v2 (the old v1
# "shell-open" cargo feature no longer exists on the tauri crate).
tauri = { version = "2" }
tauri-plugin-shell = "2"
# Guarantees a single app process so we never spawn a second backend sidecar
# against the same config file (concurrent backends clobber each other's writes).
tauri-plugin-single-instance = "2"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
